# langchain-project

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  config.py  main.py
app/api/: __init__.py  agent.py  auth.py  chat.py  documents.py  skills.py
app/core/: __init__.py  database.py  logging.py  rate_limit.py  redis.py  security.py
app/langchain_utils/: __init__.py  agents.py  chains.py  full_agent.py  llm_factory.py  memory.py  rag.py  skills.py  tools.py
app/models/: __init__.py  chat.py  user.py
app/schemas/: __init__.py  chat.py  skill.py  user.py
